# Chess

./: README.md
CLI Version/CLI Chess/: CMakeLists.txt
CLI Version/CLI Chess/Chess/: Parser.cpp
CLI Version/CLI Chess/build-Chess-Desktop-Release/.qtc_clangd/: compile_commands.json
CLI Version/CLI Chess/build-Chess-Desktop-Release/.qtc_clangd/.cache/clangd/index/: Parser.cpp.5B754A505B020452.idx
CLI Version/CLI Chess/src/: Parser.cpp
